--- a/index.html
+++ b/index.html
@@ -37,11 +37,8 @@
 	<div class="bg agile">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-6">
+				<div class="col">
 					<img src="images/logo.png" title="">
-				</div>
-				<div class="col-md-6">
-					<img src="images/coming.png" title="">
 				</div>
 			</div>
 			<p>
