--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
 	<!--fonts-->
 	<link href="//fonts.googleapis.com/css?family=Quicksand:300,400,500,700&amp;subset=latin-ext,vietnamese" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Seaweed+Script" rel="stylesheet">
 	<link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&amp;subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese"
 	 rel="stylesheet">
 	<!--//fonts-->
@@ -41,10 +42,8 @@
 					<img src="images/logo.png" title="">
 				</div>
 			</div>
-			<p>
-			</p>
-			<p>We are currently working on our website</p>
-			<p>We will be here soon,To get notified please follow us on social media!</p>
+				<p id="comingsoon">Coming soon!</p>
+				<p>We are currently working on our website</p>
 			<br/>
 			<!-- <img src="images/banner.png" alt="" /> -->
 
@@ -56,9 +55,18 @@
 				</ol>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
+						<img class="d-block w-100" src="images/samp5.jpg" alt="Third slide">
+						<div class="carousel-caption d-none d-md-block">
+							<h1>Idea</h1>
+							<p>
+								Bring tutors and students together!
+							</p>
+						</div>
+					</div>
+					<div class="carousel-item">
 						<img class="d-block w-100" src="images/samp4.jpg" alt="First slide">
 						<div class="carousel-caption d-none d-md-block">
-							<h4>Goal</h4>
+							<h1>Goal</h1>
 							<p>
 								To better connect students with tutors that can properly meet the students needs
 							</p>
@@ -67,18 +75,9 @@
 					<div class="carousel-item">
 						<img class="d-block w-100" src="images/samp2.jpg" alt="Second slide">
 						<div class="carousel-caption d-none d-md-block">
-							<h4>Making a difference</h4>
+							<h1>Making a difference</h1>
 							<p>
-								Make student life a bit easier to handle!
-							</p>
-						</div>
-					</div>
-					<div class="carousel-item">
-						<img class="d-block w-100" src="images/Samp3.jpeg" alt="Third slide">
-						<div class="carousel-caption d-none d-md-block">
-							<h4>Idea</h4>
-							<p>
-								Bring tutors and students together!
+								Provide learning resources to better the student academics
 							</p>
 						</div>
 					</div>
@@ -99,7 +98,7 @@
 			<!--//timer-->
 			<!--newsletter-->
 			<div class="newsletter">
-				<h2>Follow Us Now</h2>
+				<h2>Follow Us on Social Media</h2>
 			</div>
 			<!--//newsletter-->
 			<!--copyright-->
@@ -132,7 +131,7 @@
 					</li>
 				</ul>
 				<p>
-					Copyright &copy; 2018 Tutor Connect . All Rights Reserved
+					Copyright &copy; 2018 Tutor Connect | All Rights Reserved.
 				</p>
 			</div>
 
